--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_V2_URL=https://testing.wirtrack.com/lukav3/wirtrack2?iframe
+VITE_V2_URL=https://testing.wirtrack.com/lukav3/wirtrack2/login?iframe
